# shms_sim

./: AnaEx01.gdml  CMakeLists.txt  GNUmakefile  README  draw_hits.cc  mag_field_test.gdml  shms_geom.gdml  shms_geom_no_dump.gdml  shms_sim.cc  test_target.gdml  vis.mac
include/: #SHMSSteppingAction.cc#  MagnetCoilsHit.hh  MagnetCoilsSD.hh  SHMSAnalysisManager.hh  SHMSAnalysisManager.hh~  SHMSCoilsHit.hh~  SHMSDetectorConstruction.hh  SHMSDetectorConstruction.hh~  SHMSDetectorHit.hh  SHMSDetectorHit.hh~  SHMSDetectorSD.hh  SHMSDetectorSD.hh~  SHMSEventAction.hh  SHMSEventAction.hh~  SHMSMagTabulatedField3D.hh  SHMSMagTabulatedField3D.hh~  SHMSPhysicsList.hh  SHMSPhysicsList.hh~  SHMSPrimaryGeneratorAction.hh  SHMSPrimaryGeneratorAction.hh~  SHMSRunAction.hh  SHMSRunAction.hh~  SHMSSteppingAction.hh  SHMSSteppingAction.hh~  SHMSTrackingAction.hh  SHMSTrackingAction.hh~  SHSMCoilsHit.hh  SHSMCoilsHit.hh~
src/: MagnetCoilsHit.cc  MagnetCoilsSD.cc  MagnetCoilsSD.cc~  SHMSAnalysisManager.cc  SHMSAnalysisManager.cc~  SHMSCoilsSD.cc~  SHMSDetectorConstruction.cc  SHMSDetectorConstruction.cc~  SHMSDetectorHit.cc  SHMSDetectorHit.cc~  SHMSDetectorSD.cc  SHMSDetectorSD.cc~  SHMSEventAction.cc  SHMSEventAction.cc~  SHMSMagTabulatedField3D.cc  SHMSPhysicsList.cc  SHMSPhysicsList.cc~  SHMSPrimaryGeneratorAction.cc  SHMSPrimaryGeneratorAction.cc~  SHMSRunAction.cc  SHMSRunAction.cc~  SHMSSteppingAction.cc  SHMSSteppingAction.cc~  SHMSTrackingAction.cc  SHMSTrackingAction.cc~
